// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base/Table basic render 1`] = `
<div
  class="table"
>
  <div
    class="pi-table pi-table-scroll-position-left"
  >
    <div
      class="pi-table-content"
    >
      <div
        class="pi-table-body"
      >
        <table
          class=""
        >
          <colgroup>
            <col
              style="width:30px;min-width:30px"
            />
            <col
              style="width:50%;min-width:50%"
            />
            <col
              style="width:50%;min-width:50%"
            />
          </colgroup>
          <thead
            class="pi-table-thead"
          >
            <tr>
              <th
                class="selectionColumn"
              >
                <label
                  class="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                </label>
              </th>
              <th
                class=""
              >
                <span
                  class="sortOuter"
                >
                  Name
                  <span
                    class="icon icon-sort-descending"
                    style="width:16px;height:16px"
                  >
                    <svg
                      class="qicon qicon-sort-descending qicon-light"
                    >
                      <use
                        href="#qui-sort-descending"
                      />
                    </svg>
                  </span>
                </span>
              </th>
              <th
                class=""
              >
                Age
              </th>
            </tr>
          </thead>
          <tbody
            class="pi-table-tbody"
          >
            <tr
              class="pi-table-row pi-table-row-level-0"
              data-row-key="1"
            >
              <td
                class="selectionColumn"
              >
                <span
                  class="pi-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                <label
                  class="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                </label>
              </td>
              <td
                class=""
              >
                zhangsan
              </td>
              <td
                class=""
              >
                20
              </td>
            </tr>
            <tr
              class="pi-table-row pi-table-row-level-0"
              data-row-key="2"
            >
              <td
                class="selectionColumn"
              >
                <span
                  class="pi-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                <label
                  class="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                </label>
              </td>
              <td
                class=""
              >
                lisi
              </td>
              <td
                class=""
              >
                22
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    class="pagination"
  >
    <div
      class="total"
    >
      Total: 2
    </div>
    <div
      class="pageItems"
    >
      <span
        aria-disabled="false"
        class="btn"
      >
        <span
          class="icon icon-previous"
          style="width:16px;height:16px"
        >
          <svg
            class="qicon qicon-previous qicon-light"
          >
            <use
              href="#qui-previous"
            />
          </svg>
        </span>
      </span>
      <span
        class="current"
      >
        2 / 1
      </span>
      <span
        aria-disabled="true"
        class="btn btn-disabled"
      >
        <span
          class="icon icon-next"
          style="width:16px;height:16px"
        >
          <svg
            class="qicon qicon-next qicon-light"
          >
            <use
              href="#qui-next"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Base/Table render emptyText 1`] = `
<div
  class="table"
>
  <div
    class="pi-table pi-table-scroll-position-left"
  >
    <div
      class="pi-table-content"
    >
      <div
        class="pi-table-body"
      >
        <table
          class=""
        >
          <colgroup>
            <col
              style="width:30px;min-width:30px"
            />
            <col
              style="width:50%;min-width:50%"
            />
            <col
              style="width:50%;min-width:50%"
            />
          </colgroup>
          <thead
            class="pi-table-thead"
          >
            <tr>
              <th
                class="selectionColumn"
              >
                <label
                  class="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                </label>
              </th>
              <th
                class=""
              >
                <span
                  class="sortOuter"
                >
                  Name
                  <span
                    class="icon icon-sort-descending"
                    style="width:16px;height:16px"
                  >
                    <svg
                      class="qicon qicon-sort-descending qicon-light"
                    >
                      <use
                        href="#qui-sort-descending"
                      />
                    </svg>
                  </span>
                </span>
              </th>
              <th
                class=""
              >
                Age
              </th>
            </tr>
          </thead>
          <tbody
            class="pi-table-tbody"
          />
        </table>
      </div>
      <div
        class="pi-table-placeholder"
      >
        <div
          class="noData"
        >
          <span
            class="icon icon-cluster"
            style="width:84px;height:84px"
          >
            <svg
              class="qicon qicon-cluster qicon-dark"
            >
              <use
                href="#qui-cluster"
              />
            </svg>
          </span>
          <div
            class="word"
          >
            No data!
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="pagination"
  >
    <div
      class="total"
    >
      Total: 2
    </div>
    <div
      class="pageItems"
    >
      <span
        aria-disabled="false"
        class="btn"
      >
        <span
          class="icon icon-previous"
          style="width:16px;height:16px"
        >
          <svg
            class="qicon qicon-previous qicon-light"
          >
            <use
              href="#qui-previous"
            />
          </svg>
        </span>
      </span>
      <span
        class="current"
      >
        2 / 1
      </span>
      <span
        aria-disabled="true"
        class="btn btn-disabled"
      >
        <span
          class="icon icon-next"
          style="width:16px;height:16px"
        >
          <svg
            class="qicon qicon-next qicon-light"
          >
            <use
              href="#qui-next"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;
